--- a/public/chat.html
+++ b/public/chat.html
@@ -1,32 +1,57 @@
+<!-- public/chat.html -->
+
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Chat</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./css/index.css">
-    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
+    integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk="
+    crossorigin="anonymous"
+  />
+  <link rel="stylesheet" href="css/style.css">
+  <title>SociaBay</title>
 </head>
-
 <body>
-    <div>
-        <header class="header">Let's talk</header>
-        <div class="wrapper">
-            <div class="online">
-                <h3 class="online-heading">Online</h3>
-            </div>
-            <div class="chat-container">
-                <div class="single-chat">
-                    <p>Name</p>
-                    <span>Messageeewwerewrwerewrwe</span>
-                </div>
-            </div>
-        </div>
-    </div>
-    <script src="" async defer></script>
-</body>
+  <div class="chat-container">
+    <header class="chat-header">
+      <h1><img src="https://www.airtribe.live/_nuxt/img/main.6cc64c7.svg"/> SociaBay </h1>
+      <a href="index.html" class="btn" id="leave-btn">Leave Room</a>
+    </header>
 
+    <main class="chat-main">
+      <div class="chat-sidebar">
+        <h2 id="room-name"></h2>
+        <h3><i class="fas fa-user"></i> Online</h3>
+        <ul id="users">
+        </ul>
+      </div>
+      <div class="chat-messages">
+      </div>
+    </main>
+
+    <div class="chat-form-container">
+      <form id="chat-form">
+        <input
+          id="msg"
+          type="text"
+          placeholder="Type a Message"
+          required
+          autocomplete="off"
+        />
+        <button class="btn-plane"><i class="fas fa-paper-plane"></i> </button>
+      </form>
+    </div>
+  </div>
+
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.9.2/qs.min.js"
+    integrity="sha256-TDxXjkAUay70ae/QJBEpGKkpVslXaHHayklIVglFRT4="
+    crossorigin="anonymous"
+  ></script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="js/main.js"></script>
+</body>
 </html>
