--- a/public/index.html
+++ b/public/index.html
@@ -1,34 +1,45 @@
+<!-- public/index.html -->
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Let's talk!</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
+        integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>SociaBay</title>
 </head>
 
 <body>
-    <div className="main-container">
-        <div>
-            <h2>Let's Talk</h2>
-            <label>Username: </label>
-            <input /><br />
-            <br />
-            <label>Chat Channel:</label>
-            <select>
-                <option>Cohort Chat</option>
-                <option>Personal Chat</option>
-            </select><br /><br />
-            <button>Enter</button>
-        </div>
+    <div class="join-container">
+        <header class="join-header">
+            <h1><img src="https://www.airtribe.live/_nuxt/img/main.6cc64c7.svg" /> SociaBay </h1>
+        </header>
+
+        <main class="join-main">
+            <form action="chat.html">
+                <div class="form-control">
+                    <label for="username">Username</label>
+                    <input type="text" name="username" id="username" placeholder="Enter username..." required />
+                </div>
+                <div class="form-control">
+                    <label for="room">Chat Channel</label>
+                    <select name="room" id="room">
+                        <option value="Technology">Technology</option>
+                        <option value="Online Games">Online Games</option>
+                        <option value="Social Topics">Social Topics</option>
+                        <option value="Football">Football</option>
+                    </select>
+                </div>
+                <div class="flex">
+                    <button type="submit" class="btn">Start Chat</button>
+                </div>
+            </form>
+        </main>
     </div>
-    <script src="" async defer></script>
 </body>
 
 </html>
